# ocrd_eynollah

./: .gitignore  README.md  ocrd-tool.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ocrd_eynollah/: eynollah_inference.py  ocrd-tool.json
tests/: test_eynollah_inference.py
